<resources>
    <!-- Titles -->
    <string name="app_name">Moses</string>
    <string name="facebook_app_id">Not Set</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_create_group">New Group</string>
    <string name="title_activity_create_bill">New Bill</string>


    <!-- Action Descriptions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_done">Done</string>


    <!-- Images Descriptions -->
    <string name="avatar_image">Group avatar</string>
    <string name="balance_indicator">Balance Indicator</string>

    <!-- View strings -->
    <string name="owe_text">you owe</string>
    <string name="owed_text">you are owed</string>
    <string name="total_balance_text">total balance</string>
    <string name="members_label">Members</string>
    <string name="group_administrator">Administrator</string>

    <string name="individual_contribution_label">Individual Contribution</string>
    <string name="bill_remaining_value">To be divided</string>
    <string name="bill_total_value">Bill Total</string>


    <!-- Field hints -->
    <string name="group_name_hint">Group name</string>
    <string name="group_description_hint">Group description</string>
    <string name="group_add_member_hint">Add member</string>

    <string name="bill_name_hint">Bill name</string>
    <string name="bill_description_hint">Bill description</string>
    <string name="bill_total_hint">Total</string>

</resources>
