<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.mosesapp.moses.activities.CreateGroupActivity">

    <include layout="@layout/app_bar_create" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" >

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_add_a_photo_white_48dp"
            android:scaleType="fitCenter"
            android:padding="20dp"
            android:background="@drawable/green_circle"/>


        <EditText
            android:hint="@string/group_name_hint"
            android:id="@+id/create_group_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <EditText
        android:hint="@string/group_description_hint"
        android:id="@+id/create_group_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:background="@color/mosesGreen"
        android:textStyle="bold"
        android:text="@string/members_label"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"/>


    <AutoCompleteTextView
        android:hint="@string/group_add_member_hint"
        android:id="@+id/create_group_add_member"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/create_group_friend_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>
