<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateBillInicialActivity">

    <include layout="@layout/app_bar_create" />

    <EditText
        android:id="@+id/create_bill_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/bill_name_hint" />


    <EditText
        android:id="@+id/create_group_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/bill_description_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/bill_total_hint"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="65dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>
