<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateBillFinalActivity">

    <include layout="@layout/app_bar_create" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/summary_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bill_total_value"
                android:textColor="@color/mosesGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/bill_total"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-$200"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/summary_label" />
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/border" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bill_remaining_value"
                android:textColor="@color/mosesGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/bill_remaining_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$100"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/summary_label" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/mosesGreen"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/individual_contribution_label"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/spent_on_bill_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

</LinearLayout>
