<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.mosesapp.moses.activities.HomeActivity"
    tools:showIn="@layout/app_bar_home">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/summary_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/owe_text"
                android:textColor="@color/mosesGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/total_debit_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-$200"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/summary_label" />
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/border" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/owed_text"
                android:textColor="@color/mosesGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/total_credit_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$100"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/summary_label" />
        </android.support.v7.widget.LinearLayoutCompat>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/border" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_balance_text"
                android:textColor="@color/mosesGrey" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/total_balance_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-$200"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/summary_label" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/border" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/group_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>
